--- a/SIH-Prg/package.json
+++ b/SIH-Prg/package.json
@@ -9,13 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "firebase": "^10.1.0",
     "file-saver": "^2.0.5",
+    "firebase": "^10.1.0",
     "idb": "^7.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.3",
